# CART

./: .gitignore  CMakeLists.txt  README.md  requirements_dev.txt
CART/: CART.py  CMakeLists.txt  CohortGenerator.py
CART/CARTLib/: DataManager.py  LayoutLogic.py  OrganLabellingDemo.py  Styles.py  VolumeOnlyDataIO.py
CART/CARTLib/core/: CohortEditor.py  CohortGenerator.py  DataManager.py  DataUnitBase.py  JobProfiles.py  LayoutManagement.py  README.md  SetupWizard.py  TaskBaseClass.py
CART/CARTLib/examples/: MultiContrastSegmentationEvaluationDataUnit.py  MultiContrastSegmentationEvaluationTask.py  SegmentationEvaluationDataUnit.py  SegmentationEvaluationTask.py
CART/CARTLib/examples/GenericClassification/: GenericClassificationGUI.py  GenericClassificationOutputManager.py  GenericClassificationTask.py  GenericClassificationUnit.py
CART/CARTLib/examples/Markup/: Markup.py  README.md
CART/CARTLib/examples/MultiContrastSegmentation/: MultiContrastOutputManager.py  MultiContrastSegmentationConfig.py  MultiContrastSegmentationEvaluationDataUnit.py  MultiContrastSegmentationEvaluationTask.py  README.md
CART/CARTLib/examples/OrganLabellingDemo/: VolumeOnlyDataIO.py
CART/CARTLib/examples/RapidAnnotation/: RapidAnnotationConfig.py  RapidAnnotationGUI.py  RapidAnnotationOutputManager.py  RapidAnnotationTask.py  RapidAnnotationUnit.py  RapidMarkupGUI.py
CART/CARTLib/utils/: README.md  __init__.py  bids_init.py  cohort.py  config.py  data.py  data_checker.py  default_config.json  formatting.py  task.py  widgets.py
CART/Resources/UI/: CART.ui
(+19 files in other folders)
